--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
   "author": "Sinthros",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.3",
+    "cheerio": "^1.0.0-rc.12",
     "lodash": "^4.17.21",
     "lz4": "^0.6.5",
     "madden-franchise": "^3.3.0",
     "papaparse": "^5.4.1",
     "prompt-sync": "^4.2.0",
+    "request": "^2.88.2",
+    "string-similarity": "^4.0.4",
     "xlsx": "^0.18.5"
   }
 }
